Update GitHub Actions to use secrets

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,13 +16,13 @@ jobs:
     steps:
       # Trigger on-premises Jenkins to run the CI/CD pipelines
       - name: Trigger on-premises Jenkins build
-        run: |
-          # Parameters
-          urlOfJenkinsServer="http://10.87.1.239:8080"
-          jenkinsJobName="Swagger-PetStore"
-          userName="admin"
-          password="11967e544676bd1284f612e554162a6b31"
+        with:
+          urlOfJenkinsServer: ${{ secrets.JENKINS_SERVER }} # URL of the jenkins server
+          jenkinsJobName: "Swagger-PetStore" # The name of the jenkins job to run
+          userName: ${{ secrets.JENKINS_USERNAME }} # user name for accessing jenkins
+          password: ${{ secrets.JENKINS_PAT }} # personal Access token for accessing Jenkins
 
+        run: |
           #Generate Crumb value
           CRUMB=`curl -s -u "$userName:$password" $urlOfJenkinsServer'/crumbIssuer/api/xml?xpath=concat(//crumbRequestField,":",//crumb)'`
           TriggerResponse=$(curl -I -s -X POST -u "$userName:$password" -H "$CRUMB" "$urlOfJenkinsServer"/job/"$jenkinsJobName"/build)
