Change with to env

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,12 +16,11 @@ jobs:
     steps:
       # Trigger on-premises Jenkins to run the CI/CD pipelines
       - name: Trigger on-premises Jenkins build
-        with:
+        env:
           urlOfJenkinsServer: ${{ secrets.JENKINS_SERVER }} # URL of the jenkins server
           jenkinsJobName: "Swagger-PetStore" # The name of the jenkins job to run
           userName: ${{ secrets.JENKINS_USERNAME }} # user name for accessing jenkins
           password: ${{ secrets.JENKINS_PAT }} # personal Access token for accessing Jenkins
-
         run: |
           #Generate Crumb value
           CRUMB=`curl -s -u "$userName:$password" $urlOfJenkinsServer'/crumbIssuer/api/xml?xpath=concat(//crumbRequestField,":",//crumb)'`
